<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:columnCount="2"
    android:rowCount="6"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"

        android:fontFamily="sans-serif"
        android:text="@string/edit_task"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:shadowRadius="5"
        android:shadowColor="@color/black"
        android:layout_row="0"
        />
    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:gravity = "top"
        android:layout_gravity="center"
        android:background="@drawable/back_button"
        android:shadowColor="@color/black"
        android:shadowRadius="5"
        android:contentDescription="@string/arrow"
        android:layout_row="0"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/field_entry"
        android:contentDescription="@string/name_task" />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_gravity="left"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/field_time"
            android:contentDescription="@string/time" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_row="2"
            android:layout_columnSpan="2"
            android:layout_gravity="right"
            android:layout_marginStart="20dp"
            android:background="@drawable/field_date"
            android:contentDescription="@string/date" />
    </LinearLayout>

    <EditText
        android:layout_marginTop="20dp"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_gravity="center"
        android:background="@drawable/field_editor"
        android:contentDescription="@string/task_description"
        android:layout_marginRight="30dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="200dp"
        android:layout_columnSpan="2"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:text="@string/remove_task"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:shadowRadius="3"
        android:shadowColor="@color/black"
        android:background="@drawable/rectangle_1"
        android:layout_marginRight="30dp"

        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginBottom="43dp"
        android:layout_columnSpan="2"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/add_task"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:shadowRadius="3"
        android:shadowColor="@color/black"
        android:background="@drawable/rectangle_9"
        android:layout_marginRight="30dp"
        />

</GridLayout>
